--- a/src/style.css
+++ b/src/style.css
@@ -78,9 +78,7 @@ html {
 }
 
 body {
-  font-family: var(--font-body);
-  font-size: var(--fontSize-1);
-  color: var(--color-text);
+  font-family: "Noto Sans KR";
 }
 
 footer {
